--- a/packages.config
+++ b/packages.config
@@ -2,19 +2,19 @@
 <packages>
   <package id="AeroWizard" version="2.1.10" targetFramework="net462" />
   <package id="CloudFlareUtilities" version="0.4.0-alpha" targetFramework="net462" />
-  <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net462" />
-  <package id="EPPlus" version="4.1.0" targetFramework="net462" />
+  <package id="EngineIoClientDotNet" version="1.0.3" targetFramework="net462" />
+  <package id="EPPlus" version="4.1.1" targetFramework="net462" />
   <package id="Geocoding.net" version="3.6.1" targetFramework="net462" />
   <package id="GeoCoordinate.NetStandard1" version="1.0.1" targetFramework="net462" />
   <package id="Google.Api.CommonProtos" version="1.1.0" targetFramework="net462" />
-  <package id="Google.Api.Gax" version="2.0.0" targetFramework="net462" />
-  <package id="Google.Apis" version="1.29.1" targetFramework="net462" />
-  <package id="Google.Apis.Auth" version="1.29.1" targetFramework="net462" />
-  <package id="Google.Apis.Core" version="1.29.1" targetFramework="net462" />
-  <package id="Google.Protobuf" version="3.4.0" targetFramework="net462" />
+  <package id="Google.Api.Gax" version="2.2.0" targetFramework="net462" />
+  <package id="Google.Apis" version="1.30.0" targetFramework="net462" />
+  <package id="Google.Apis.Auth" version="1.30.0" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.30.0" targetFramework="net462" />
+  <package id="Google.Protobuf" version="3.4.1" targetFramework="net462" />
   <package id="GPSOAuthSharp.NetStandard1" version="1.0.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
-  <package id="Markdig" version="0.13.3" targetFramework="net462" />
+  <package id="Markdig" version="0.14.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net462" />
@@ -33,17 +33,18 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.3" targetFramework="net462" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.4" targetFramework="net462" />
+  <package id="POGOProtos.Core" version="2.19.0" targetFramework="net462" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
   <package id="S2Geometry" version="1.0.3" targetFramework="net462" />
-  <package id="Selenium.Support" version="3.5.2" targetFramework="net462" />
-  <package id="Selenium.WebDriver" version="3.5.2" targetFramework="net462" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="2.32.0" targetFramework="net462" />
-  <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net462" />
+  <package id="Selenium.Support" version="3.7.0" targetFramework="net462" />
+  <package id="Selenium.WebDriver" version="3.7.0" targetFramework="net462" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.33.0" targetFramework="net462" />
+  <package id="SocketIoClientDotNet" version="1.0.3" targetFramework="net462" />
   <package id="SQLite" version="3.13.0" targetFramework="net462" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net462" />
-  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="net462" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.14" targetFramework="net462" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net462" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
@@ -68,10 +69,10 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Security" version="4.3.1" targetFramework="net462" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
@@ -88,7 +89,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
