--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AeroWizard" version="2.1.10" targetFramework="net462" />
+  <package id="AeroWizard" version="2.1.11" targetFramework="net462" />
   <package id="CloudFlareUtilities" version="1.0.0" targetFramework="net462" />
   <package id="EngineIoClientDotNet" version="1.0.5" targetFramework="net462" />
   <package id="EPPlus" version="4.1.1" targetFramework="net462" />
@@ -12,7 +12,7 @@
   <package id="Google.Apis.Auth" version="1.32.2" targetFramework="net462" />
   <package id="Google.Apis.Core" version="1.32.2" targetFramework="net462" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net462" />
-  <package id="GPSOAuthSharp.NetStandard1" version="1.0.1" targetFramework="net462" />
+  <package id="GPSOAuthSharp.Core" version="1.0.3" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Markdig" version="0.14.9" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
@@ -35,7 +35,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json.Schema" version="3.0.5" targetFramework="net462" />
   <package id="POGOProtos.Core" version="2.22.0" targetFramework="net462" />
-  <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net462" />
+  <package id="Portable.BouncyCastle" version="1.8.1.4" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="S2Geometry" version="1.0.3" targetFramework="net462" />
   <package id="Selenium.Support" version="3.9.1" targetFramework="net462" />
@@ -96,7 +96,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="Telegram.Bot" version="13.4.0" targetFramework="net462" />
   <package id="TinyIoC" version="1.3" targetFramework="net462" developmentDependency="true" />
